--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -36,10 +36,12 @@ alt-2 = 'workspace 2'
 
 # alt-b = 'workspace B'
 # alt-t = 'workspace T'
-alt-u = 'workspace U'
-alt-i = 'workspace I'
-alt-o = 'workspace O'
-alt-p = 'workspace P'
+alt-u = 'workspace u'
+alt-i = 'workspace i'
+alt-o = 'workspace o'
+alt-p = 'workspace p'
+
+# alt-n = 'exec-and-forget id=$(aerospace list-windows --all --json | jq "[.[]|select(.\"app-name\"=="Google Chrome" and .\"window-title\"!=\"Picture-in-picture\")|.\"window-id\"][0]//0\") && [[ \"$id\" != \"0\" ]] && aerospace focus --window-id \"$id\"'
 
 alt-shift-1 = 'move-node-to-workspace 1'
 alt-shift-2 = 'move-node-to-workspace 2'
@@ -54,10 +56,10 @@ alt-shift-2 = 'move-node-to-workspace 2'
 
 # alt-shift-b = 'move-node-to-workspace B'
 # alt-shift-t = 'move-node-to-workspace T'
-alt-shift-u = 'move-node-to-workspace U'
-alt-shift-i = 'move-node-to-workspace I'
-alt-shift-o = 'move-node-to-workspace O'
-alt-shift-p = 'move-node-to-workspace P'
+alt-shift-u = 'move-node-to-workspace u'
+alt-shift-i = 'move-node-to-workspace i'
+alt-shift-o = 'move-node-to-workspace o'
+alt-shift-p = 'move-node-to-workspace p'
 
 
 alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
