--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -67,6 +67,10 @@ set-option -g visual-silence off
 set-option -w -g monitor-activity off
 set-option -g bell-action none
 
+# Screensaver
+# set-option -g lock-after-time 60
+# set-option -g lock-command "cmatrix -s -b"
+
 # Open pane in same path
 bind-key c new-window -a -c "#{pane_current_path}"
 bind-key '%' split-window -h -c '#{pane_current_path}'
