--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -18,10 +18,15 @@ outer.right =      [{ monitor."^built-in" = 0 }, 400]
 [mode.main.binding]
 alt-comma = 'reload-config'
 
-alt-h = 'focus --boundaries-action wrap-around-the-workspace left'
-alt-j = 'focus --boundaries-action wrap-around-the-workspace down'
-alt-k = 'focus --boundaries-action wrap-around-the-workspace up'
-alt-l = 'focus --boundaries-action wrap-around-the-workspace right'
+# alt-h = 'focus --boundaries-action wrap-around-the-workspace left'
+# alt-j = 'focus --boundaries-action wrap-around-the-workspace down'
+# alt-k = 'focus --boundaries-action wrap-around-the-workspace up'
+# alt-l = 'focus --boundaries-action wrap-around-the-workspace right'
+
+alt-h = 'focus left'
+alt-j = 'focus down'
+alt-k = 'focus up'
+alt-l = 'focus right'
 
 alt-1 = 'workspace 1'
 alt-2 = 'workspace 2'
