--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -1,6 +1,6 @@
 # defaults write -g NSWindowShouldDragOnGesture -bool true
 
-default-root-container-layout = 'v_accordion'
+default-root-container-layout = 'accordion'
 enable-normalization-flatten-containers = true
 enable-normalization-opposite-orientation-for-nested-containers = true
 automatically-unhide-macos-hidden-apps = true
