--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -1,6 +1,8 @@
 # defaults write -g NSWindowShouldDragOnGesture -bool true
 
 default-root-container-layout = 'accordion'
+default-root-container-orientation = 'vertical'
+
 enable-normalization-flatten-containers = true
 enable-normalization-opposite-orientation-for-nested-containers = true
 automatically-unhide-macos-hidden-apps = true
