--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,19 +1,34 @@
+# https://ghostty.org/docs/config/reference
+
+mouse-hide-while-typing = true
 macos-option-as-alt = true
 macos-titlebar-style = hidden
 window-padding-x = 15
 window-padding-y = 15
 
-font-size = 14
+font-feature = "-calt, -liga, -dlig"
+
+font-size = 15
 font-family = "Iosevka Term"
 font-style = "Medium Extended"
 font-style-bold = "SemiBold Extended"
-font-feature = "-calt, -liga, -dlig"
+
+# font-size = 16
+# font-family = "mononoki"
+# font-style = "Regular"
+# font-style-bold = "Bold"
+
+# font-size = 14.5
+# font-family = "Maple Mono"
+# font-style = "Medium"
+# font-style-bold = "Bold"
 
 cursor-color = #AADD44
 cursor-text = #000000
 cursor-style = "block"
 cursor-opacity = 1
-adjust-cursor-thickness = 3
+cursor-style-blink = false
+adjust-cursor-thickness = 180%
 
 background = 20272b
 foreground = d3c6aa
