--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -13,6 +13,26 @@ font-family = "Iosevka Term"
 font-style = "Medium Extended"
 font-style-bold = "SemiBold Extended"
 
+# size = 12.8
+# # normal = {style = "Regular", family = "SF Mono"}
+# normal = {style = "Light", family = "SF Mono"}
+# bold = {style = "Medium"}
+
+# font-size = 14.3
+# font-family = "JetBrains Mono"
+# font-style = "Medium"
+# font-style-bold = "Bold"
+
+# font-size = 14
+# font-family = "SF Mono"
+# font-style = "Medium"
+# font-style-bold = "Bold"
+
+# font-size = 16
+# font-family = "Fantasque Sans Mono"
+# font-style = "Regular"
+# font-style-bold = "Bold"
+
 # font-size = 16
 # font-family = "mononoki"
 # font-style = "Regular"
