--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -136,7 +136,7 @@ palette = 11=#dbbc7f
 palette = 12=#7fbbb3
 palette = 13=#d699b6
 palette = 14=#83c092
-palette = 15=#d3c39f
+palette = 15=#beb299
 
 # everforest official
 # palette = 0=#4b565c
