--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -128,7 +128,7 @@ palette = 3=#dbb76f
 palette = 4=#59bbae
 palette = 5=#d68caf
 palette = 6=#6fc183
-palette = 7=#d6bf8d
+palette = 7=#beb299
 palette = 8=#4b565c
 palette = 9=#e67e80
 palette = 10=#a7c080
@@ -136,7 +136,7 @@ palette = 11=#dbbc7f
 palette = 12=#7fbbb3
 palette = 13=#d699b6
 palette = 14=#83c092
-palette = 15=#beb299
+palette = 15=#d3c6aa
 
 # everforest official
 # palette = 0=#4b565c
